--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^5.37.1",
     "@tanstack/react-table": "^8.17.3",
     "class-variance-authority": "^0.7.0",
@@ -37,6 +38,7 @@
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
+    "react-currency-input-field": "^3.8.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
