--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@clerk/backend": "^1.1.5",
+    "@clerk/localizations": "^2.4.3",
     "@clerk/nextjs": "^5.0.9",
     "@hono/clerk-auth": "^2.0.0",
     "@hono/zod-validator": "^0.2.1",
